Rewrite all code which related to work with db to NOSQL approach with MongoDB

--- a/.gitignore
+++ b/.gitignore
@@ -119,4 +119,4 @@ dist
 # Ignore all local history of files
 .history
 
-# End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode
+config.js
