--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.25",
+    "nodemailer": "^6.4.13",
     "pug": "^3.0.0"
   }
 }
